aggiunto il router con le pagine collegate

--- a/src/app/footers/footer/footer.component.html
+++ b/src/app/footers/footer/footer.component.html
@@ -1,10 +1,21 @@
 <footer>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Contact Us</a></li>
-      <li><a href="#">Privacy Policy</a></li>
+      <li>
+        <a href="/" class="active">Home</a>
+    </li>
+    <li>
+      <p class="b">Vendo:</p>
+    </li>
+    <li>
+        <a href="/bots">Bot ds</a>
+    </li>
+    <li>
+        <a href="/server">Server ds</a>
+    </li>
+    <li>
+        <a href="/nulla">Nulla</a>
+    </li>
     </ul>
   </nav>
 </footer>
