--- a/src/app/headers/header/header.component.html
+++ b/src/app/headers/header/header.component.html
@@ -15,19 +15,19 @@
       <nav #nav class="">
           <ul #barra class="accanto">
               <li>
-                  <a href="" class="active">Home</a>
+                  <a href="/" class="active">Home</a>
               </li>
               <li>
                 <p class="b">Vendo:</p>
               </li>
               <li>
-                  <a href="">Server ds</a>
+                  <a href="/bots">Bot ds</a>
               </li>
               <li>
-                  <a href="">Bot ds</a>
+                  <a href="/server">Server ds</a>
               </li>
               <li>
-                  <a href="">Nulla</a>
+                  <a href="/nulla">Nulla</a>
               </li>
           </ul>
       </nav>
