--- a/src/app/mains/home/home.component.html
+++ b/src/app/mains/home/home.component.html
@@ -1,32 +1,61 @@
 <div class="container">
-  <div class="section active">
-    <img src="../../../assets/logo.jpg" alt="logo sito">
-    <div class="navigation-buttons">
-      <button (click)="goToPreviousSection()">&#8249;</button>
-      <button (click)="goToNextSection()">&#8250;</button>
-    </div>
-  </div>
-  <div class="section">
 
-    <div class="container-centrato">
-      <div class="patata">
-        <h2>Section 2</h2>
-        <p>Contenuto della seconda sezione.</p>
-        <div class="navigation-buttons">
-          <button (click)="goToPreviousSection()">&#8249;</button>
-          <button (click)="goToNextSection()">&#8250;</button>
-        </div>
-      </div>
-    </div>
-  </div>
+
   <div class="section">
-    <h2>Section 3</h2>
-    <p>Contenuto della terza sezione.</p>
-    <div class="navigation-buttons">
-      <button (click)="goToPreviousSection()">&#8249;</button>
-      <button (click)="goToNextSection()">&#8250;</button>
+    <div class="primo-box">
+
+      <h1>Bot <span class="discord">Discord</span> Personalizzati</h1>
+
+      <div class="divider"></div>
+
+      <p>Vuoi rendere ancora più unico il tuo discord? <br> Con funzionalità nuove, o migliori di quelle esistenti con altri Bot Personalizzate al 100%!</p>
+
+
+    </div>
+    <div class="secondo-box">
+      <button (click)="goToPreviousSection()">&#8249;-</button>
+      <button (click)="navigateToLink('/bots')">Vai alla pagina</button>
+      <button (click)="goToNextSection()">-&#8250;</button>
     </div>
   </div>
+
+
+  <!-- Server Discord Page -->
+  <div class="section">
+    <div class="primo-box">
+
+      <h1>Server <span class="discord">Discord</span> Personalizzati</h1>
+
+      <div class="divider"></div>
+
+      <p>Vuoi rendere unico il tuo discord? <br> Se hai un tema o bisogno di un aiuto a creare un discord contattami e ti aiuterò come meglio posso!</p>
+
+    </div>
+    <div class="secondo-box">
+      <button (click)="goToPreviousSection()">&#8249;-</button>
+      <button (click)="navigateToLink('/bots')">Vai alla pagina</button>
+      <button (click)="goToNextSection()">-&#8250;</button>
+    </div>
+  </div>
+
+<!-- Nulla Page -->
+<div class="section">
+  <div class="primo-box">
+
+    <h1>Non faccio nulla</h1>
+
+    <div class="divider"></div>
+
+    <p>Non c'è molto da dire <br> Non faccio nulla in cambio di soldi <br> Accedi alla pagina per saperne di più</p>
+
+  </div>
+  <div class="secondo-box">
+    <button (click)="goToPreviousSection()">&#8249;-</button>
+    <button (click)="navigateToLink('/bots')">Vai alla pagina</button>
+    <button (click)="goToNextSection()">-&#8250;</button>
+  </div>
+</div>
+
 </div>
 
 <div class="sfondo-nero">
