--- a/src/app/mains/home/home.component.html
+++ b/src/app/mains/home/home.component.html
@@ -65,7 +65,7 @@
 <div class="container-random-image">
   <div></div>
   <app-random-image></app-random-image>
-  <app-random-image></app-random-image>
-  <app-random-image></app-random-image>
+  <app-random-image class="responsive"></app-random-image>
+  <app-random-image class="responsive"></app-random-image>
   <div></div>
 </div>
