--- a/src/app/headers/header/header.component.css
+++ b/src/app/headers/header/header.component.css
@@ -137,7 +137,7 @@ header .header-right .menu div {
 }
 
 /* cambio grandezza schermo -300*/
-@media only screen and (max-width: 300px) {
+@media (max-width: 400px) {
 
   /* Header Responsive */
   .logoimg {
