responsive forse ho finito di aggiustarmi l'header

--- a/src/app/headers/header/header.component.css
+++ b/src/app/headers/header/header.component.css
@@ -126,7 +126,7 @@ header .header-right .menu div {
       font-size: 20px;
   }
   .titles h2 {
-      font-size: 14px
+      display: none;
   }
 
   /* Hero Responsive */
