modificata la favicon del sito

--- a/src/app/headers/header/header.component.html
+++ b/src/app/headers/header/header.component.html
@@ -32,7 +32,7 @@
           </ul>
       </nav>
 
-      <div #menu class="z menu" (click)="toggleNav()">
+      <div #menu class="menu" (click)="toggleNav()">
           <div></div>
           <div></div>
           <div></div>
