aggiustati dettagli home

--- a/src/app/footers/footer/footer.component.html
+++ b/src/app/footers/footer/footer.component.html
@@ -1,21 +1,29 @@
-<footer>
-  <nav>
-    <ul>
-      <li>
-        <a href="/" class="active">Home</a>
-    </li>
-    <li>
-      <p class="b">Vendo:</p>
-    </li>
-    <li>
-        <a href="/bots">Bot ds</a>
-    </li>
-    <li>
-        <a href="/server">Server ds</a>
-    </li>
-    <li>
-        <a href="/nulla">Nulla</a>
-    </li>
-    </ul>
-  </nav>
+<footer id="contatti" class="footer">
+  <div class="container">
+    <div class="footer__content">
+      <div class="footer__section">
+        <img src="../../../assets/footer-meme.png" alt="">
+      </div>
+      <div class="footer__section">
+        <span class="footer__section-title">Useful Links</span>
+        <ul class="footer__list">
+          <li>Discord: MicheleIlPro#7126</li>
+          <li>Steam: Mike Dm-C</li>
+        </ul>
+      </div>
+      <div class="footer__section">
+        <span class="footer__section-title">Link</span>
+        <ul class="footer__list">
+          <li><a href="https://www.patreon.com/MikeDmC" target="_blank">Patreon</a></li>
+          <li><a href="https://discord.com/invite/TuaU2FFgks" target="_blank">Server Discord</a></li>
+          <li><a href="https://musicanza-web.vercel.app" target="_blank">Musicanza Web</a></li>
+          <li><a href="https://github.com/MicheleIlPro" target="_blank">Github</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr class="footer__divider">
+    <div class="footer__bottom">
+      <p class="footer__text">© <span id="current-year">2023</span> MikeDmC  by La Taverna.</p>
+    </div>
+  </div>
 </footer>
