--- a/src/app/mains/bots/bots.component.html
+++ b/src/app/mains/bots/bots.component.html
@@ -1,1 +1,41 @@
-<p>bots works!</p>
+<div class="sidebar">
+  <a href="/bots#">Sezione 1</a>
+  <a href="/bots#section2">Sezione 2</a>
+  <a href="/bots#section3">Sezione 3</a>
+</div>
+
+<section id="section1" class="grid-section">
+  <div class="grid-row">
+    <div class="grid-item">
+      <h2>Titolo 1</h2>
+      <p>Descrizione 1</p>
+    </div>
+    <div class="divider"></div>
+    <div class="grid-item">
+      <h2>Titolo 2</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta laboriosam eos sint neque, dolorum beatae, unde harum architecto, quas est voluptatibus ea et minima! Totam temporibus quia quae asperiores corrupti?</p>
+    </div>
+  </div>
+
+  <div class="dividerVerticale"></div>
+
+  <div class="grid-row">
+    <div class="grid-item">
+      <h2>Titolo 3</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum quidem quam architecto sapiente alias ut sequi aliquid laudantium ipsa tempore! Ad nulla sint iusto quasi tenetur. Distinctio expedita obcaecati veritatis? 3</p>
+    </div>
+    <div class="divider"></div>
+    <div class="grid-item">
+      <h2>Titolo 4</h2>
+      <p>Descrizione 4</p>
+    </div>
+  </div>
+</section>
+
+<section id="section2">
+  <div class="divider"></div>
+</section>
+
+<section id="section3">
+  <div class="divider"></div>
+</section>
