--- a/src/app/mains/home/home.component.html
+++ b/src/app/mains/home/home.component.html
@@ -33,7 +33,7 @@
     </div>
     <div class="secondo-box">
       <button (click)="goToPreviousSection()">&#8249;-</button>
-      <button (click)="navigateToLink('/bots')">Vai alla pagina</button>
+      <button (click)="navigateToLink('/server')">Vai alla pagina</button>
       <button (click)="goToNextSection()">-&#8250;</button>
     </div>
   </div>
@@ -51,7 +51,7 @@
   </div>
   <div class="secondo-box">
     <button (click)="goToPreviousSection()">&#8249;-</button>
-    <button (click)="navigateToLink('/bots')">Vai alla pagina</button>
+    <button (click)="navigateToLink('/nulla')">Vai alla pagina</button>
     <button (click)="goToNextSection()">-&#8250;</button>
   </div>
 </div>
