--- a/src/app/footers/footer/footer.component.css
+++ b/src/app/footers/footer/footer.component.css
@@ -1,31 +1,76 @@
-/* div{
+/* Styles for the footer */
+.footer {
   background-color: #0B2239;
-  width: 100%;
-  height: 10vh;
-} */
-*{
-  font-family: 'DynaPuff', cursive;
+  padding: 20px 0;
 }
 
-footer {
-  background-color: #0B2239;
-  color: #fff;
-  padding: 20px;
+.footer img{
+  height: 15vh;
+  margin-right: 1vw;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.footer__content {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  flex-wrap: wrap;
 }
 
-nav ul {
+.footer__section {
+  flex: 1 1 300px;
+  margin-bottom: 20px;
+}
+
+.footer__section-title {
+  font-size: 16px;
+  font-weight: bold;
+  color: #4174dc;
+  text-transform: uppercase;
+}
+
+.footer__list {
   list-style: none;
-  display: flex;
+  padding: 0;
+  margin-top: 10px;
 }
 
-nav li {
-  margin-right: 20px;
+.footer__list li {
+  margin-bottom: 5px;
+  color: #cfd9e0;
 }
 
-nav a {
-  color: #fff;
+.footer__list a {
   text-decoration: none;
+  color: #cfd9e0;
+}
+
+.footer__list a:hover {
+  background-color: #fff;
+  color: #000;
+  border-radius: 5px;
+  padding: 5px 10px;
+  transition: all ease 0.3s;
+}
+
+.footer__divider {
+  border: none;
+  border-top: 1px solid hsla(0,0%,100%,.1);
+  margin: 20px 0;
+}
+
+.footer__bottom {
+  text-align: center;
+}
+
+.footer__text {
+  font-size: 14px;
+  color: white;
+}
+
+.footer__text a:hover {
+  color: #1E40AF;
 }
