aggiunta la pagina Work in Progress

--- a/src/app/headers/header/header.component.html
+++ b/src/app/headers/header/header.component.html
@@ -21,13 +21,16 @@
                 <p class="b">Vendo:</p>
               </li>
               <li>
-                  <a href="/bots">Bot ds</a>
+                <a href="/error#error">Bot ds</a>
+                <!-- <a href="/bots">Bot ds</a> -->
               </li>
               <li>
-                  <a href="/server">Server ds</a>
+                  <a href="/error#error">Server ds</a>
+                  <!-- <a href="/server">Server ds</a> -->
               </li>
               <li>
-                  <a href="/nulla">Nulla</a>
+                  <a href="/error#error">Nulla</a>
+                  <!-- <a href="/nulla">Nulla</a> -->
               </li>
           </ul>
       </nav>
