--- a/src/app/mains/home/home.component.html
+++ b/src/app/mains/home/home.component.html
@@ -14,7 +14,8 @@
     </div>
     <div class="secondo-box">
       <button (click)="goToPreviousSection()">&#8249;-</button>
-      <button (click)="navigateToLink('/bots')">Vai alla pagina</button>
+      <!-- <button (click)="navigateToLink('/bots')">Vai alla pagina</button> -->
+      <button (click)="navigateToLink('/error#error')">Vai alla pagina</button>
       <button (click)="goToNextSection()">-&#8250;</button>
     </div>
   </div>
@@ -33,7 +34,8 @@
     </div>
     <div class="secondo-box">
       <button (click)="goToPreviousSection()">&#8249;-</button>
-      <button (click)="navigateToLink('/server')">Vai alla pagina</button>
+      <!-- <button (click)="navigateToLink('/server')">Vai alla pagina</button> -->
+      <button (click)="navigateToLink('/error#error')">Vai alla pagina</button>
       <button (click)="goToNextSection()">-&#8250;</button>
     </div>
   </div>
@@ -51,7 +53,8 @@
   </div>
   <div class="secondo-box">
     <button (click)="goToPreviousSection()">&#8249;-</button>
-    <button (click)="navigateToLink('/nulla')">Vai alla pagina</button>
+    <!-- <button (click)="navigateToLink('/nulla')">Vai alla pagina</button> -->
+    <button (click)="navigateToLink('/error#error')">Vai alla pagina</button>
     <button (click)="goToNextSection()">-&#8250;</button>
   </div>
 </div>
