pagina bots responsive 1

--- a/src/app/mains/bots/bots.component.html
+++ b/src/app/mains/bots/bots.component.html
@@ -5,15 +5,15 @@
 </div>
 
 <section id="section1" class="grid-section">
-  <div class="grid-row">
+  <div class="grid-row red">
     <div class="grid-item">
-      <h2>Titolo 1</h2>
-      <p>Descrizione 1</p>
+      <h2>Informazioni sui Bot Discord</h2>
+      <p>È possibile fare tutto ciò che ti viene in mente o almeno ci posso provare! È possibile creare un bot che ti aiuti a moderare, a gestire i ruoli, a rispondere alle domande ripetute ed a interagire con l'utenza</p>
     </div>
     <div class="divider"></div>
     <div class="grid-item">
-      <h2>Titolo 2</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta laboriosam eos sint neque, dolorum beatae, unde harum architecto, quas est voluptatibus ea et minima! Totam temporibus quia quae asperiores corrupti?</p>
+      <h2>Host del bot</h2>
+      <p>Una volta acquistato il bot per un mese lo terrò io acceso, una volta finito il mese potrai scegliere di acquistare il file eseguibile per accendere il bot o abbonarti al mio patreon facendo in modo che continui io a tenerlo acceso</p>
     </div>
   </div>
 
@@ -21,13 +21,13 @@
 
   <div class="grid-row">
     <div class="grid-item">
-      <h2>Titolo 3</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum quidem quam architecto sapiente alias ut sequi aliquid laudantium ipsa tempore! Ad nulla sint iusto quasi tenetur. Distinctio expedita obcaecati veritatis? 3</p>
+      <h2>Cosa c'è di Personalizzabile?</h2>
+      <p>Oltre all'infinita lista di comandi che esistono e che posso creare, <br> il bot potrà avere lo stato, l'attività, la foto profilo e la descrizione.</p>
     </div>
     <div class="divider"></div>
     <div class="grid-item">
-      <h2>Titolo 4</h2>
-      <p>Descrizione 4</p>
+      <h2>Altre info</h2>
+      <p>I miei bot sono creati in Java diversamente da quelli più comuni che sono programmati in Js e Python. Utilizzo prevalentemente documentazione mista tra il discord JDA, DV8FromTheWorld e chatgpt.</p>
     </div>
   </div>
 </section>
