--- a/src/app/mains/bots/bots.component.css
+++ b/src/app/mains/bots/bots.component.css
@@ -62,6 +62,7 @@ section{
 .grid-row {
   display: block;
   justify-content: center;
+  width: 40vw;
 }
 
 .grid-item {
@@ -77,4 +78,51 @@ section{
 .grid-item p {
   font-size: 16px;
   color: #888;
+}
+
+.red{
+  border: 2px solid red;
+}
+
+@media only screen and (max-width: 1000px) {
+
+  .grid-section {
+    display: block;
+  }
+
+  .grid-row {
+    width: auto;
+  }
+
+  .grid-item {
+    padding: 20px;
+  }
+
+  .grid-item h2 {
+    font-size: 20px;
+    margin-bottom: 5px;
+  }
+
+  .grid-item p {
+    font-size: 12px;
+  }
+
+  .dividerVerticale{
+    display: none;
+  }
+}
+
+@media (max-width: 400px) {
+
+  .grid-item {
+    padding: 15px;
+  }
+
+  .grid-item h2 {
+    font-size: 16px;
+  }
+
+  .grid-item p {
+    font-size: 8px;
+  }
 }
