--- a/src/app/mains/bots/bots.component.html
+++ b/src/app/mains/bots/bots.component.html
@@ -5,15 +5,15 @@
 </div>
 
 <section id="section1" class="grid-section">
-  <div class="grid-row red">
+  <div class="grid-row">
     <div class="grid-item">
       <h2>Informazioni sui Bot Discord</h2>
-      <p>È possibile fare tutto ciò che ti viene in mente o almeno ci posso provare! È possibile creare un bot che ti aiuti a moderare, a gestire i ruoli, a rispondere alle domande ripetute ed a interagire con l'utenza</p>
+      <p>È possibile fare tutto ciò che ti viene in mente o almeno ci posso provare! È possibile creare un bot che ti aiuti a moderare, a gestire i ruoli, a rispondere alle domande ripetute ed a interagire con l'utenza.</p>
     </div>
     <div class="divider"></div>
     <div class="grid-item">
       <h2>Host del bot</h2>
-      <p>Una volta acquistato il bot per un mese lo terrò io acceso, una volta finito il mese potrai scegliere di acquistare il file eseguibile per accendere il bot o abbonarti al mio patreon facendo in modo che continui io a tenerlo acceso</p>
+      <p>Una volta acquistato il bot per un mese lo terrò io acceso, una volta finito il mese potrai scegliere di acquistare il file eseguibile per accendere il bot o abbonarti al mio patreon facendo in modo che continui io a tenerlo acceso.</p>
     </div>
   </div>
 
@@ -32,7 +32,55 @@
   </div>
 </section>
 
-<section id="section2">
+
+<!-- showcase dei bot -->
+<section id="section2" class="grid-section2">
+  <div class="divider"></div>
+  <div class="item">
+    <img src="../../../assets/bot_pp/sessanza.png" alt="sessanza photo profile">
+    <div>
+      <h2>Sessanza</h2>
+      <p>Bot Utility, con funzioni nuove e mai viste! ( /giochionline e /condividi ).</p>
+      <p>Disponibile agli abbonati Bot Premium su <a href="https://www.patreon.com/MikeDmC/membership" target="_blank">Patreon</a>.</p>
+    </div>
+  </div>
+  <div class="divider"></div>
+  <div class="item-inverted">
+    <div>
+      <h2>Musicanza</h2>
+      <p>Music Bot, esclusivamente funzionante con Youtube, 99% in italiano. <br> e tra i pochi che supportano i comandi scritti e con lo slash. </p>
+      <p>Disponibile agli abbonati Bot Premium su <a href="https://www.patreon.com/MikeDmC/membership" target="_blank">Patreon</a>.</p>
+    </div>
+    <img src="../../../assets/bot_pp/musicanza.png" alt="sessanza photo profile">
+  </div>
+  <div class="divider"></div>
+  <div class="item">
+    <img src="../../../assets/bot_pp/ripper_logo.jpg" alt="sessanza photo profile">
+    <div>
+      <h2>Censured</h2>
+      <p>Questo bot creato su commissione, aiuta il proprietario <br> a gestire i propri clienti nella sua attività.</p>
+      <p>Non posso dare altre informazioni per privacy.</p>
+    </div>
+  </div>
+  <div class="divider"></div>
+  <div class="item-inverted">
+    <div>
+      <h2>Censured</h2>
+      <p>Questo bot creato su misura di una community, <br> contiene vari comandi, tra cui uno che ti permette di kikkare <br> un utente dal discord se in possesso del ruolo specifico.</p>
+      <p>Non posso dare altre informazioni per privacy</p>
+    </div>
+    <img src="../../../assets/bot_pp/kami-engine.png" alt="sessanza photo profile">
+  </div>
+  <div class="divider"></div>
+  <div class="item">
+    <img src="../../../assets/bot_pp/cringitaly.png" alt="sessanza photo profile">
+    <div>
+      <h2>Censured</h2>
+      <p>Bot creato per una community, utilizzato per monitorare l'entrata <br> dell'utenza, controllando ed intimando l'utenza a impostarsi un ruolo.</p>
+      <p>Non posso dare altre informazioni per privacy</p>
+    </div>
+  </div>
+
   <div class="divider"></div>
 </section>
 
