--- a/src/app/mains/bots/bots.component.html
+++ b/src/app/mains/bots/bots.component.html
@@ -35,6 +35,9 @@
 
 <!-- showcase dei bot -->
 <section id="section2" class="grid-section2">
+  <div class="titol">
+    <h2>Showcase Bots</h2>
+  </div>
   <div class="divider"></div>
   <div class="item">
     <img src="../../../assets/bot_pp/sessanza.png" alt="sessanza photo profile">
@@ -84,6 +87,7 @@
   <div class="divider"></div>
 </section>
 
-<section id="section3">
+<section id="section3" class="red">s
+  s
   <div class="divider"></div>
 </section>
