page bots, section prezzi, aggiunto, responcive

--- a/src/app/headers/header/header.component.html
+++ b/src/app/headers/header/header.component.html
@@ -21,8 +21,8 @@
                 <p class="b">Vendo:</p>
               </li>
               <li>
-                <a href="/error#error">Bot ds</a>
-                <!-- <a href="/bots">Bot ds</a> -->
+                <!-- <a href="/error#error">Bot ds</a> -->
+                <a href="/bots">Bot ds</a>
               </li>
               <li>
                   <a href="/error#error">Server ds</a>
