--- a/src/app/mains/bots/bots.component.html
+++ b/src/app/mains/bots/bots.component.html
@@ -1,19 +1,22 @@
 <div class="sidebar">
-  <a href="/bots#">Sezione 1</a>
-  <a href="/bots#section2">Sezione 2</a>
-  <a href="/bots#section3">Sezione 3</a>
+  <a href="/bots#">Info</a>
+  <a href="/bots#section2">Bots</a>
+  <a href="/bots#section3">Prezzi</a>
 </div>
 
 <section id="section1" class="grid-section">
   <div class="grid-row">
     <div class="grid-item">
       <h2>Informazioni sui Bot Discord</h2>
-      <p>È possibile fare tutto ciò che ti viene in mente o almeno ci posso provare! È possibile creare un bot che ti aiuti a moderare, a gestire i ruoli, a rispondere alle domande ripetute ed a interagire con l'utenza.</p>
+      <p>È possibile fare tutto ciò che ti viene in mente o almeno ci posso provare! È possibile creare un bot che ti
+        aiuti a moderare, a gestire i ruoli, a rispondere alle domande ripetute ed a interagire con l'utenza.</p>
     </div>
     <div class="divider"></div>
     <div class="grid-item">
       <h2>Host del bot</h2>
-      <p>Una volta acquistato il bot per un mese lo terrò io acceso, una volta finito il mese potrai scegliere di acquistare il file eseguibile per accendere il bot o abbonarti al mio patreon facendo in modo che continui io a tenerlo acceso.</p>
+      <p>Una volta acquistato il bot per un mese lo terrò io acceso, una volta finito il mese potrai scegliere di
+        acquistare il file eseguibile per accendere il bot o abbonarti al mio patreon facendo in modo che continui io a
+        tenerlo acceso.</p>
     </div>
   </div>
 
@@ -22,12 +25,14 @@
   <div class="grid-row">
     <div class="grid-item">
       <h2>Cosa c'è di Personalizzabile?</h2>
-      <p>Oltre all'infinita lista di comandi che esistono e che posso creare, <br> il bot potrà avere lo stato, l'attività, la foto profilo e la descrizione.</p>
+      <p>Oltre all'infinita lista di comandi che esistono e che posso creare, <br> il bot potrà avere lo stato,
+        l'attività, la foto profilo e la descrizione.</p>
     </div>
     <div class="divider"></div>
     <div class="grid-item">
       <h2>Altre info</h2>
-      <p>I miei bot sono creati in Java diversamente da quelli più comuni che sono programmati in Js e Python. Utilizzo prevalentemente documentazione mista tra il discord JDA, DV8FromTheWorld e chatgpt.</p>
+      <p>I miei bot sono creati in Java diversamente da quelli più comuni che sono programmati in Js e Python. Utilizzo
+        prevalentemente documentazione mista tra il discord JDA, DV8FromTheWorld e chatgpt.</p>
     </div>
   </div>
 </section>
@@ -44,15 +49,18 @@
     <div>
       <h2>Sessanza</h2>
       <p>Bot Utility, con funzioni nuove e mai viste! ( /giochionline e /condividi ).</p>
-      <p>Disponibile agli abbonati Bot Premium su <a href="https://www.patreon.com/MikeDmC/membership" target="_blank">Patreon</a>.</p>
+      <p>Disponibile agli abbonati Bot Premium su <a href="https://www.patreon.com/MikeDmC/membership"
+          target="_blank">Patreon</a>.</p>
     </div>
   </div>
   <div class="divider"></div>
   <div class="item-inverted">
     <div>
       <h2>Musicanza</h2>
-      <p>Music Bot, esclusivamente funzionante con Youtube, 99% in italiano. <br> e tra i pochi che supportano i comandi scritti e con lo slash. </p>
-      <p>Disponibile agli abbonati Bot Premium su <a href="https://www.patreon.com/MikeDmC/membership" target="_blank">Patreon</a>.</p>
+      <p>Music Bot, esclusivamente funzionante con Youtube, 99% in italiano. <br> e tra i pochi che supportano i comandi
+        scritti e con lo slash. </p>
+      <p>Disponibile agli abbonati Bot Premium su <a href="https://www.patreon.com/MikeDmC/membership"
+          target="_blank">Patreon</a>.</p>
     </div>
     <img src="../../../assets/bot_pp/musicanza.png" alt="sessanza photo profile">
   </div>
@@ -69,7 +77,8 @@
   <div class="item-inverted">
     <div>
       <h2>Censured</h2>
-      <p>Questo bot creato su misura di una community, <br> contiene vari comandi, tra cui uno che ti permette di kikkare <br> un utente dal discord se in possesso del ruolo specifico.</p>
+      <p>Questo bot creato su misura di una community, <br> contiene vari comandi, tra cui uno che ti permette di
+        kikkare <br> un utente dal discord se in possesso del ruolo specifico.</p>
       <p>Non posso dare altre informazioni per privacy</p>
     </div>
     <img src="../../../assets/bot_pp/kami-engine.png" alt="sessanza photo profile">
@@ -79,7 +88,8 @@
     <img src="../../../assets/bot_pp/cringitaly.png" alt="sessanza photo profile">
     <div>
       <h2>Censured</h2>
-      <p>Bot creato per una community, utilizzato per monitorare l'entrata <br> dell'utenza, controllando ed intimando l'utenza a impostarsi un ruolo.</p>
+      <p>Bot creato per una community, utilizzato per monitorare l'entrata <br> dell'utenza, controllando ed intimando
+        l'utenza a impostarsi un ruolo.</p>
       <p>Non posso dare altre informazioni per privacy</p>
     </div>
   </div>
@@ -87,7 +97,34 @@
   <div class="divider"></div>
 </section>
 
-<section id="section3" class="red">s
-  s
-  <div class="divider"></div>
+<section id="section3" class="">
+  <div class="titol">
+    <h2>Listino Prezzi</h2>
+  </div>
+  <div class="section3">
+    <div class="table-container colore1">
+      <div class="table-title">
+        Base del Bot
+      </div>
+      <div class="table-desc">
+        disponibile a partire da soli 10 euro. Il costo del Bot verrà adattato alle tue richieste specifiche e alle funzioni desiderate, garantendoti la flessibilità di personalizzarlo secondo le tue esigenze senza preoccuparti di costi eccessivi. Il nostro servizio offre un'esperienza su misura che si adatta al tuo budget e si evolve insieme alle tue necessità in continua evoluzione. Non lasciare che il costo sia un ostacolo per ottenere il Bot perfetto per te.
+      </div>
+    </div>
+    <div class="table-container colore1">
+      <div class="table-title">
+        Non preoccuparti dell'host
+      </div>
+      <div class="table-desc">
+        Non preoccuparti dell'host! Con il mio servizio su <a href="https://www.patreon.com/MikeDmC/membership" target="_blank">Patreon</a>, gestirò personalmente l'attivazione e il mantenimento del Bot per te, in modo che tu non debba preoccuparti di come funziona o di essere esperto in materia. Semplicemente abbonandoti, avrai un Bot attivo 24/7 a tua disposizione.
+      </div>
+    </div>
+    <div class="table-container colore1">
+      <div class="table-title">
+        Risparmia sull'host
+      </div>
+      <div class="table-desc">
+        Sei un esperto del settore e desideri risparmiare? Ora puoi acquistare direttamente l'applicativo del Bot Discord e gestirlo tu stesso, mantenendolo attivo 24/7 o secondo le tue esigenze. Inoltre, con un abbonamento SUPER economico su <a href="https://www.patreon.com/MikeDmC/membership" target="_blank">Patreon</a>, avrai accesso all'assistenza tecnica disponibile 24/7! Approfitta di questa opportunità per avere un controllo totale sul tuo Bot e risparmiare sul costo dell'host.
+      </div>
+    </div>
+  </div>
 </section>
