all page, cambiati i link ad alcuni bottoni

--- a/src/app/mains/bots/bots.component.html
+++ b/src/app/mains/bots/bots.component.html
@@ -2,6 +2,7 @@
   <a href="/bots#">Info</a>
   <a href="/bots#section2">Bots</a>
   <a href="/bots#section3">Prezzi</a>
+  <a href="/bots#contatti">Contatti</a>
 </div>
 
 <section id="section1" class="grid-section">
@@ -115,7 +116,7 @@
         Non preoccuparti dell'host
       </div>
       <div class="table-desc">
-        Non preoccuparti dell'host! Con il mio servizio su <a href="https://www.patreon.com/MikeDmC/membership" target="_blank">Patreon</a>, gestirò personalmente l'attivazione e il mantenimento del Bot per te, in modo che tu non debba preoccuparti di come funziona o di essere esperto in materia. Semplicemente abbonandoti, avrai un Bot attivo 24/7 a tua disposizione.
+        Con il mio servizio su <a href="https://www.patreon.com/MikeDmC/membership" target="_blank">Patreon</a>, gestirò personalmente l'attivazione e il mantenimento del Bot per te, in modo che tu non debba preoccuparti di come funziona o di essere esperto in materia. Semplicemente abbonandoti, avrai un Bot attivo 24/7 a tua disposizione.
       </div>
     </div>
     <div class="table-container colore1">
