--- a/src/app/mains/home/home.component.html
+++ b/src/app/mains/home/home.component.html
@@ -14,8 +14,8 @@
     </div>
     <div class="secondo-box">
       <button (click)="goToPreviousSection()">&#8249;-</button>
-      <!-- <button (click)="navigateToLink('/bots')">Vai alla pagina</button> -->
-      <button (click)="navigateToLink('/error#error')">Vai alla pagina</button>
+      <button (click)="navigateToLink('/bots')">Vai alla pagina</button>
+      <!-- <button (click)="navigateToLink('/error#error')">Vai alla pagina</button> -->
       <button (click)="goToNextSection()">-&#8250;</button>
     </div>
   </div>
@@ -35,7 +35,7 @@
     <div class="secondo-box">
       <button (click)="goToPreviousSection()">&#8249;-</button>
       <!-- <button (click)="navigateToLink('/server')">Vai alla pagina</button> -->
-      <button (click)="navigateToLink('/error#error')">Vai alla pagina</button>
+      <button (click)="navigateToLink('/error#error')">Work In Progress</button>
       <button (click)="goToNextSection()">-&#8250;</button>
     </div>
   </div>
@@ -54,7 +54,7 @@
   <div class="secondo-box">
     <button (click)="goToPreviousSection()">&#8249;-</button>
     <!-- <button (click)="navigateToLink('/nulla')">Vai alla pagina</button> -->
-    <button (click)="navigateToLink('/error#error')">Vai alla pagina</button>
+    <button (click)="navigateToLink('/error#error')">Work In Progress</button>
     <button (click)="goToNextSection()">-&#8250;</button>
   </div>
 </div>
