component footer, aggiornate 2 scritte.

--- a/src/app/footers/footer/footer.component.html
+++ b/src/app/footers/footer/footer.component.html
@@ -5,9 +5,9 @@
         <img src="../../../assets/footer-meme.png" alt="">
       </div>
       <div class="footer__section">
-        <span class="footer__section-title">Useful Links</span>
+        <span class="footer__section-title">Contatti</span>
         <ul class="footer__list">
-          <li>Discord: MicheleIlPro#7126</li>
+          <li>Discord: micheleilpro</li>
           <li>Steam: Mike Dm-C</li>
         </ul>
       </div>
